--- a/cjoli.client/index.html
+++ b/cjoli.client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>🏒 CJoli - Ice Hockey Tournament</title>
   </head>
 
-  <body>
+  <body onload="start()">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
