--- a/cjoli.client/index.html
+++ b/cjoli.client/index.html
@@ -7,7 +7,7 @@
     <title>🏒 CJoli - Ice Hockey Tournament</title>
   </head>
 
-  <body onload="start()">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
